# Chippy-Health-records-AI-App

./: .gitignore  .mcp.json  CLAUDE.md  README.md  architecture.md  backend-ai-research.md  free-stack.md  index.md  product-document.md  swift-ios-research.md  swiftui-ux.md  todo.md
backend/: .env.example  .gitignore  Dockerfile  docker-compose.yml  pyproject.toml
backend/app/: main.py
backend/app/ai/: chunking.py  gemini_client.py  pipeline.py  prompts.py  query_engine.py  vector_store.py
backend/app/api/: auth.py  chat.py  documents.py  timeline.py
backend/app/background/: tasks.py
backend/app/core/: auth.py  config.py  supabase_client.py
backend/app/models/: schemas.py
backend/app/services/: chat_service.py
backend/supabase/migrations/: 001_initial_schema.sql
ios/: .gitignore
ios/Chippy/: .gitignore
ios/Chippy/Chippy/: Chippy.entitlements
ios/Chippy/Chippy.xcodeproj/: project.pbxproj
ios/Chippy/Chippy/App/: AppCoordinator.swift  ChippyApp.swift  MainTabView.swift  RootView.swift
ios/Chippy/Chippy/Core/: AppLockManager.swift  AppTheme.swift  AuthManager.swift  Constants.swift  KeychainService.swift  LockScreenView.swift  SkeletonView.swift
ios/Chippy/Chippy/Features/Chat/: ChatView.swift  (+1 more)
ios/Chippy/Chippy/Persistence/: AppModelContainer.swift  DocumentRepository.swift
ios/Chippy/Chippy/Services/: APIClient.swift  AuthService.swift  DocumentService.swift  StreamingService.swift  TimelineService.swift
ios/Chippy/ChippyTests/: ChippyTests.swift
ios/Chippy/ChippyUITests/: ChippyUITests.swift  ChippyUITestsLaunchTests.swift
(+22 files in other folders)
